--- a/source/client/design.ui
+++ b/source/client/design.ui
@@ -109,7 +109,11 @@
               </size>
              </property>
              <property name="text">
-              <string>+</string>
+              <string/>
+             </property>
+             <property name="icon">
+              <iconset resource="resources.qrc">
+               <normaloff>:/images/plus.png</normaloff>:/images/plus.png</iconset>
              </property>
             </widget>
            </item>
@@ -129,6 +133,10 @@
              </property>
              <property name="text">
               <string/>
+             </property>
+             <property name="icon">
+              <iconset resource="resources.qrc">
+               <normaloff>:/images/trash.png</normaloff>:/images/trash.png</iconset>
              </property>
              <property name="autoDefault">
               <bool>false</bool>
@@ -258,6 +266,8 @@
    <header location="global">QtWebKitWidgets/QWebView</header>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
