--- a/source/client/design.ui
+++ b/source/client/design.ui
@@ -51,9 +51,6 @@
          </item>
          <item>
           <widget class="QWidget" name="lineEdit_series_wrapper" native="true">
-           <property name="styleSheet">
-            <string notr="true"/>
-           </property>
            <layout class="QVBoxLayout" name="verticalLayout_3">
             <property name="leftMargin">
              <number>2</number>
@@ -69,9 +66,6 @@
             </property>
             <item>
              <widget class="QLineEdit" name="lineEdit_series">
-              <property name="styleSheet">
-               <string notr="true"/>
-              </property>
               <property name="placeholderText">
                <string>TICKER</string>
               </property>
@@ -89,9 +83,6 @@
          </item>
          <item>
           <widget class="QWidget" name="comboBox_model_wrapper" native="true">
-           <property name="styleSheet">
-            <string notr="true"/>
-           </property>
            <layout class="QVBoxLayout" name="verticalLayout_4">
             <property name="leftMargin">
              <number>2</number>
@@ -106,11 +97,7 @@
              <number>2</number>
             </property>
             <item>
-             <widget class="QComboBox" name="comboBox_model">
-              <property name="styleSheet">
-               <string notr="true"/>
-              </property>
-             </widget>
+             <widget class="QComboBox" name="comboBox_model"/>
             </item>
            </layout>
           </widget>
@@ -237,9 +224,6 @@
          </item>
          <item>
           <widget class="QWidget" name="comboBox_metric_wrapper" native="true">
-           <property name="styleSheet">
-            <string notr="true"/>
-           </property>
            <layout class="QVBoxLayout" name="verticalLayout_6">
             <property name="leftMargin">
              <number>2</number>
@@ -254,11 +238,7 @@
              <number>2</number>
             </property>
             <item>
-             <widget class="QComboBox" name="comboBox_metric">
-              <property name="styleSheet">
-               <string notr="true"/>
-              </property>
-             </widget>
+             <widget class="QComboBox" name="comboBox_metric"/>
             </item>
            </layout>
           </widget>
@@ -272,9 +252,6 @@
          </item>
          <item>
           <widget class="QWidget" name="comboBox_method_wrapper" native="true">
-           <property name="styleSheet">
-            <string notr="true"/>
-           </property>
            <layout class="QVBoxLayout" name="verticalLayout_7">
             <property name="leftMargin">
              <number>2</number>
@@ -289,11 +266,7 @@
              <number>2</number>
             </property>
             <item>
-             <widget class="QComboBox" name="comboBox_method">
-              <property name="styleSheet">
-               <string notr="true"/>
-              </property>
-             </widget>
+             <widget class="QComboBox" name="comboBox_method"/>
             </item>
            </layout>
           </widget>
@@ -310,9 +283,6 @@
            <property name="autoFillBackground">
             <bool>false</bool>
            </property>
-           <property name="styleSheet">
-            <string notr="true"/>
-           </property>
            <layout class="QVBoxLayout" name="verticalLayout_8">
             <property name="leftMargin">
              <number>2</number>
@@ -327,11 +297,7 @@
              <number>2</number>
             </property>
             <item>
-             <widget class="QComboBox" name="comboBox_type">
-              <property name="styleSheet">
-               <string notr="true"/>
-              </property>
-             </widget>
+             <widget class="QComboBox" name="comboBox_type"/>
             </item>
            </layout>
           </widget>
@@ -387,9 +353,6 @@
               </item>
               <item>
                <widget class="QWidget" name="dateEdit_start_wrapper" native="true">
-                <property name="styleSheet">
-                 <string notr="true"/>
-                </property>
                 <layout class="QHBoxLayout" name="horizontalLayout_7">
                  <property name="leftMargin">
                   <number>2</number>
@@ -404,11 +367,7 @@
                   <number>1</number>
                  </property>
                  <item>
-                  <widget class="QDateEdit" name="dateEdit_start">
-                   <property name="styleSheet">
-                    <string notr="true"/>
-                   </property>
-                  </widget>
+                  <widget class="QDateEdit" name="dateEdit_start"/>
                  </item>
                 </layout>
                </widget>
@@ -432,9 +391,6 @@
               </item>
               <item>
                <widget class="QWidget" name="dateEdit_end_wrapper" native="true">
-                <property name="styleSheet">
-                 <string notr="true"/>
-                </property>
                 <layout class="QHBoxLayout" name="horizontalLayout_8">
                  <property name="leftMargin">
                   <number>2</number>
@@ -449,11 +405,7 @@
                   <number>1</number>
                  </property>
                  <item>
-                  <widget class="QDateEdit" name="dateEdit_end">
-                   <property name="styleSheet">
-                    <string notr="true"/>
-                   </property>
-                  </widget>
+                  <widget class="QDateEdit" name="dateEdit_end"/>
                  </item>
                 </layout>
                </widget>
@@ -477,9 +429,6 @@
               </item>
               <item>
                <widget class="QWidget" name="dateEdit_forecast_wrapper" native="true">
-                <property name="styleSheet">
-                 <string notr="true"/>
-                </property>
                 <layout class="QHBoxLayout" name="horizontalLayout_9">
                  <property name="leftMargin">
                   <number>2</number>
@@ -494,11 +443,7 @@
                   <number>1</number>
                  </property>
                  <item>
-                  <widget class="QDateEdit" name="dateEdit_forecast">
-                   <property name="styleSheet">
-                    <string notr="true"/>
-                   </property>
-                  </widget>
+                  <widget class="QDateEdit" name="dateEdit_forecast"/>
                  </item>
                 </layout>
                </widget>
@@ -517,9 +462,6 @@
          </item>
          <item>
           <widget class="QWidget" name="comboBox_offset_wrapper" native="true">
-           <property name="styleSheet">
-            <string notr="true"/>
-           </property>
            <layout class="QVBoxLayout" name="verticalLayout_10">
             <property name="leftMargin">
              <number>2</number>
@@ -534,11 +476,7 @@
              <number>2</number>
             </property>
             <item>
-             <widget class="QComboBox" name="comboBox_offset">
-              <property name="styleSheet">
-               <string notr="true"/>
-              </property>
-             </widget>
+             <widget class="QComboBox" name="comboBox_offset"/>
             </item>
            </layout>
           </widget>
