--- a/source/client/design.ui
+++ b/source/client/design.ui
@@ -235,13 +235,49 @@
              </widget>
             </item>
             <item>
-             <widget class="QComboBox" name="comboBox_trend"/>
+             <widget class="QWidget" name="comboBox_trend_wrapper" native="true">
+              <layout class="QVBoxLayout" name="verticalLayout_17">
+               <property name="leftMargin">
+                <number>2</number>
+               </property>
+               <property name="topMargin">
+                <number>2</number>
+               </property>
+               <property name="rightMargin">
+                <number>2</number>
+               </property>
+               <property name="bottomMargin">
+                <number>2</number>
+               </property>
+               <item>
+                <widget class="QComboBox" name="comboBox_trend"/>
+               </item>
+              </layout>
+             </widget>
             </item>
             <item>
-             <widget class="QCheckBox" name="checkBox_dumped">
-              <property name="text">
-               <string>Тренд с затуханием</string>
-              </property>
+             <widget class="QWidget" name="widget_3" native="true">
+              <layout class="QVBoxLayout" name="verticalLayout_19">
+               <property name="leftMargin">
+                <number>2</number>
+               </property>
+               <property name="topMargin">
+                <number>0</number>
+               </property>
+               <property name="rightMargin">
+                <number>2</number>
+               </property>
+               <property name="bottomMargin">
+                <number>0</number>
+               </property>
+               <item>
+                <widget class="QCheckBox" name="checkBox_dumped">
+                 <property name="text">
+                  <string>Тренд с затуханием</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
              </widget>
             </item>
            </layout>
